--- a/overallWorkTime/overallWorkTime.phtml
+++ b/overallWorkTime/overallWorkTime.phtml
@@ -1,11 +1,175 @@
-<?php
-
-?>
-<html>
+<!DOCTYPE html>
+<html lang="ja">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	</head>
-    <body>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="../css/design.css">
+		<link rel="stylesheet" href="../css/content.css">
+		<script src="../jquery/jquery-1.11.3.min.js"></script>
+		<script src="../script/workTime.js"></script>
 
-    </body>
+		<title>勤務時間表(全体)画面</title>
+	</head>
+	<body>
+		<div class="container">
+			<header class="box">
+				<h1 class="title">勤怠管理システム</h1>
+			</header>
+
+			<div class="box width70 clearfix">
+				<div class="userInfo float-left">
+					<p>ユーザー名 : admin / 権限 : 管理者</p>
+				</div>
+				<div class="userInfo float-right">
+					<p><a href="../login/login.php">ログアウト</a></p>
+				</div>
+			</div>
+
+			<div class="box menu"><!-- ヘッダーメニュー-->
+				<ul id="dropmenu">
+	 				<li><a href="../mainMenu/mainMenu.php">メニュー</a>
+	   			 		<ul>
+	    				</ul>
+	 				</li>
+	  				<li><a href="overallWorkTime.php">勤務時間表</a>
+	   					<ul>
+	   					</ul>
+	 				</li>
+	 				<li><a href="../settingHoliday/settingHoliday.php">休日設定</a>
+	    				<ul>
+	   					</ul>
+	 				</li>
+	  				<li><a href="#">ユーザー設定</a>
+	   					<ul>
+	     					<li><a href="../updateUser/updateUser.php">ユーザー設定変更</a></li>
+	     					<li><a href="../insertUser/insertUser.php">ユーザー登録</a></li>
+	   					</ul>
+	  				</li>
+	  				<li><a href="../settingRestTime/settingRestTime.php">休憩時間設定</a>
+	   					<ul>
+	   					</ul>
+	  				</li>
+				</ul>
+			</div>
+
+			<div class="box main-container">
+				<div class="workTime">
+					<p>条件検索</p>
+					<div class="selectbox">
+
+						<table>
+							<tr>
+							<!--表示非表示の切り替え　年次-->
+								<td id="formYear">日時 &lt;&lt;
+									<select name="year">
+										<option value="2015">2015</option>
+										<option value="2014">2014</option>
+										<option value="2013">2013</option>
+									</select> 年
+								</td>
+
+							<!--表示非表示の切り替え　月次-->
+						       	<td id="formMonth">
+									<select name="month">
+										<option value="1">1</option>
+										<option value="2">2</option>
+										<option value="3">3</option>
+										<option value="4">4</option>
+										<option value="5">5</option>
+										<option value="6">6</option>
+										<option value="7">7</option>
+										<option value="8">8</option>
+										<option value="9">9</option>
+										<option value="10">10</option>
+										<option value="11">11</option>
+										<option value="12">12</option>
+									</select> 月&gt;&gt;
+								</td>
+
+							<!--表示非表示の切り替え　週次
+								<td id="formWeek">
+									 第<select name="week">
+										<option value="1">1</option>
+										<option value="2">2</option>
+										<option value="3">3</option>
+										<option value="4">4</option>
+									</select> 週
+								</td>
+
+							<!--表示非表示の切り替え　日時
+								<td id="formDay">
+									 <input type="date" name="holiday">
+								</td>
+
+							<!--表示非表示の切り替え　期間
+								<td id="formPeriod">
+									 開始期間
+									<input type="date" name="startDate">　
+									終了期間
+									<input type="date" name="endDate">
+								</td>
+								-->
+							</tr>
+						</table>
+
+表示時間:
+            <label><input type="radio" name="work" value="year">年次</label>
+            <label><input type="radio" name="work" value="month" checked="checked">月次</label>
+
+						<p>氏名
+							<select name="user">
+								<option value="1">Aさん</option>
+								<option value="2">Bさん</option>
+								<option value="3">Cさん</option>
+								<option value="4">Dさん</option>
+							</select>
+
+							<span style="margin-left:50%;">
+								<input type="submit" value="検索">
+								<input type="submit" value="全件表示">
+							</span>
+						</p>
+					</div>
+
+					<br>
+					<p>表示期間 : 20XX年X月XX日 ～ 20XX年X月XX日
+					<br>
+
+					<div class="worksheet">
+						<table>
+							<tr class="record">
+								<td>氏名</td><td>出勤日合計</td><td>欠席日数</td><td>営業日数</td><td>休憩時間</td>
+								<td>労働時間合計</td><td>月平均<br>労働時間</td><td>週平均<br>労働時間</td>
+							</tr>
+							<tr>
+								<td><a href="personalWorkTime.html">神田太郎</a></td><td>21</td><td>0</td>
+								<td>22</td><td>22.0</td><td>124.0</td><td>5.6</td><td>5.6</td>
+							</tr>
+							<tr>
+								<td><a href="#">東京太郎</a></td><td>21</td><td>1</td><td>22</td>
+								<td>22.0</td><td>124.0</td><td>5.6</td><td>5.6</td>
+							</tr>
+							<tr>
+								<td><a href="#">秋葉流</a></td><td>22</td><td>0</td>
+								<td>22</td><td>22.0</td><td>132.0</td><td>6</td><td>6</td>
+							</tr>
+							<tr>
+								<th>合計</th><th>64</th><th>1</th><th>66</th><th>66.0</th>
+								<th>380.0</th><th>17.2</th><th>17.2</th></tr>
+							<tr>
+								<th>平均</th><th>21.3</th><th>0.3</th><th>22.0</th>
+								<th>22.0</th><th>126.6</th><th>5.7</th><th>5.7</th>
+							</tr>
+						</table>
+						<p class="right"><button class="exportExcel">excelに出力</button>　　<button class="exportPDF">PDFに出力</button></p>
+					</div>
+				</div>
+			</div>
+
+			<footer class="box footer">
+				<p>Copyright © 2010-2015 FusionOne Co.,Ltd. All Rights Reserved.</p>
+			</footer>
+
+		</div>
+
+	</body>
 </html>
