--- a/error/error.phtml
+++ b/error/error.phtml
@@ -5,8 +5,8 @@
 <html lang="ja">
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="design.css">
-		<link rel="stylesheet" href="content.css">
+		<link rel="stylesheet" href="../css/design.css">
+		<link rel="stylesheet" href="../css/content.css">
 		<script src="../jquery/jquery-1.11.3.min.js"></script>
 		<script>
 
@@ -32,34 +32,32 @@
 					<p>ユーザー名 : admin / 権限 : 管理者</p>
 				</div>
 				<div class="userInfo float-right">
-					<p><a href="login.html">ログアウト</a></p>
+					<p><a href="../login/login.php">ログアウト</a></p>
 				</div>
 			</div>
 
 			<div class="box menu"><!-- ヘッダーメニュー-->
 				<ul id="dropmenu">
-	 				<li><a href="mainMenu-admin.php">メニュー</a>
+	 				<li><a href="../mainMenu/mainMenu.php">メニュー</a>
 	   			 		<ul>
 	    				</ul>
 	 				 </li>
-	  				<li><a href="ovarallWarkTime.html">勤務時間表</a>
+	  				<li><a href="../overallWorkTime/overallWorkTime.php">勤務時間表</a>
 	   					<ul>
 	   					</ul>
 	 				</li>
-	 				<li><a href="settingHoliday.html">休日設定</a>
+	 				<li><a href="../settingHoliday/settingHoliday.php">休日設定</a>
 	    				<ul>
 	   					</ul>
 	 				</li>
 	  				<li><a href="#">ユーザー設定</a>
 	   					<ul>
-     					 	<li><a href="changePassword.html">パスワード変更</a></li>
+	     					<li><a href="../updateUser/updateUser.php">ユーザー設定変更</a></li>
 
-	     					<li><a href="updateUser.html">ユーザー設定変更</a></li>
-
-	     					<li><a href="insertUser.html">ユーザー登録</a></li>
+	     					<li><a href="./insertUser/insertUser.html">ユーザー登録</a></li>
 	   					</ul>
 	  				</li>
-	  				<li><a href="settingRestTime.html">休憩時間設定</a>
+	  				<li><a href="../settingRestTime/settingRestTime.php">休憩時間設定</a>
 	   					<ul>
 	   					</ul>
 	  				</li>
@@ -71,13 +69,14 @@
 					■ エラー
 				</div>
 				<div id="errorMsg">
-					不正な文字が入力されました。<br>
-					再度入力して下さい。<br>
+					<?php echo $model->getErrMsg();?><br>
 					<br>
 					<br>
 
 					<div align="center">
-						<a href="mainMenu-admin.php">メインメニューへ戻る</a>
+
+						<a href="<?php echo $model->getLp();?>"><?php echo $model->getTitle();?></a>
+
 					</div>
 				</div>
 			</div>
