--- a/error/error.phtml
+++ b/error/error.phtml
@@ -69,7 +69,7 @@
 					■ エラー
 				</div>
 				<div id="errorMsg">
-					<?php echo $model->getErrMsg();?><br>
+					<?php echo $model->getError();?><br>
 					<br>
 					<br>
 
