--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -104,13 +104,13 @@
 												<div id="tabBox1">
 
 													<form action="" method="POST">
-														月<input type="checkbox" name="dayOfWeek[]" value="1" >
-														火<input type="checkbox" name="dayOfWeek[]" value="2" >
-														水<input type="checkbox" name="dayOfWeek[]" value="3" >
-														木<input type="checkbox" name="dayOfWeek[]" value="4" >
-														金<input type="checkbox" name="dayOfWeek[]" value="5" >
-														土 <input type="checkbox" name="dayOfWeek[]" value="6" >
-														日 <input type="checkbox" name="dayOfWeek[]" value="0">
+														月<input type="checkbox" name="dayOfWeek[]" id="area1" value="1" >
+														火<input type="checkbox" name="dayOfWeek[]" id="area2" value="2" >
+														水<input type="checkbox" name="dayOfWeek[]" id="area3" value="3" >
+														木<input type="checkbox" name="dayOfWeek[]" id="area4" value="4" >
+														金<input type="checkbox" name="dayOfWeek[]" id="area5" value="5" >
+														土 <input type="checkbox" name="dayOfWeek[]" id="area6" value="6" >
+														日 <input type="checkbox" name="dayOfWeek[]" id="area7" value="0">
 
 
 														<br>
@@ -118,8 +118,8 @@
 
 														<strong>期間選択：</strong>
 														&nbsp;
-														開始日付 ： <input type="date" name="startWorkingday">
-														終了日付 ： <input type="date" name="endWorkingday">
+														開始日付 ： <input type="date" id="startDay1" name="startWorkingday">
+														終了日付 ： <input type="date" id="endDay1" name="endWorkingday">
 														<br>
 														<br>
 														氏名：
@@ -166,7 +166,7 @@
 											            <br>
 											            <br>
 
-														<input type="submit" value="登録">
+														<input type="submit" id="allInsert" value="登録">
 														<input type="hidden" name="execute" value="insertAll">
 													</form>
 
@@ -382,7 +382,11 @@
    			時
    			<select name="jquery-ui-dialog-form-minute" id="jquery-ui-dialog-form-minute" class="text ui-widget-content ui-corner-all" />
             	<option value="00">00</option>
-            	<option value="30">30</option>
+            	<option value="10">10</option>
+               	<option value="20">20</option>
+				<option value="30">30</option>
+				<option value="40">40</option>
+				<option value="50">50</option>
             </select>
 			 分
         </p>
@@ -397,7 +401,11 @@
    			時
    			<select name="jquery-ui-dialog-form-endminute" id="jquery-ui-dialog-form-endminute" class="text ui-widget-content ui-corner-all" />
             	<option value="00">00</option>
-            	<option value="30">30</option>
+            	<option value="10">10</option>
+               	<option value="20">20</option>
+				<option value="30">30</option>
+				<option value="40">40</option>
+				<option value="50">50</option>
             </select>
 			 分
         </p>
